[package]
name = "iroh-webrtc"
version = "0.1.0"
edition = "2021"
description = "WebRTC custom transport for iroh — direct p2p via data channels"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anchalshivank/iroh-webrtc-transport"

[dependencies]
iroh = { version = "0.97", features = ["unstable-custom-transports"] }
iroh-base = "0.97"
iroh-relay = "0.97"
noq-udp = "0.9"
n0-watcher = "0.6"
n0-future = "0.3"
tokio = { version = "1", features = ["sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
bytes = "1"

# Native: str0m sans-IO WebRTC
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
str0m = "0.18"
tokio = { version = "1", features = ["sync", "time", "net", "rt"] }
parking_lot = "0.12"

# Browser: web-sys RTCPeerConnection
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
send_wrapper = "0.6"
web-sys = { version = "0.3", features = [
    "RtcPeerConnection",
    "RtcPeerConnectionIceEvent",
    "RtcConfiguration",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelInit",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "MessageEvent",
] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
anyhow = "1"
